changement de section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li class="dropdown">
                 <a href="javascript:void(0)">Plus</a>
                 <ul class="dropdown-content">
-                    <li><a href="#">Statistiques</a></li>
+                    <li><a href="#">Circuits</a></li>
                     <li><a href="#">Galerie</a></li>
                     <li><a href="#">Boutique</a></li>
                 </ul>
@@ -68,12 +68,14 @@
             </div>
         </section>
 
-        <!-- Section Statistiques -->
-        <section class="statistics-section">
-            <h2>Statistiques et Records</h2>
-            <p>La Formule 1 est un sport rempli de records impressionnants et de statistiques fascinantes. Découvrez les meilleurs moments de l'histoire de la F1, les records de vitesse, et les performances des pilotes et des équipes.</p>
-            <a href="#" class="cta-button">Explorer les statistiques</a>
+        <!-- Section Circuits -->
+        <section class="circuits-section">
+            <h2>Les Circuits de la Formule 1</h2>
+            <p>Les circuits de Formule 1 sont des lieux emblématiques où se jouent les batailles les plus palpitantes de chaque saison. Ces circuits, qui varient entre pistes urbaines, circuits classiques et tracés uniques, sont réputés pour leurs défis techniques et leur capacité à tester les compétences des pilotes.</p>
+            <p>Chaque Grand Prix se déroule sur un circuit différent, offrant des conditions de course variées qui influencent les stratégies des équipes et des pilotes. Certains circuits sont célèbres pour leur histoire et leur complexité, comme Monaco, Silverstone, ou Spa-Francorchamps.</p>
+            <a href="#" class="cta-button">Découvrir les circuits</a>
         </section>
+
 
         <!-- Galerie de la Formule 1 -->
         <section class="gallery-section">
