--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
         </section>
 
         <!-- Section Circuits -->
-        <section class="circuits-section">
+        <div class="circuits-section">
             <h2>Les Circuits de la Formule 1</h2>
             <p>Les circuits de Formule 1 sont des lieux emblématiques où se jouent les batailles les plus palpitantes de chaque saison. Ces circuits, qui varient entre pistes urbaines, circuits classiques et tracés uniques, sont réputés pour leurs défis techniques et leur capacité à tester les compétences des pilotes.</p>
             <p>Chaque Grand Prix se déroule sur un circuit différent, offrant des conditions de course variées qui influencent les stratégies des équipes et des pilotes. Certains circuits sont célèbres pour leur histoire et leur complexité, comme Monaco, Silverstone, ou Spa-Francorchamps.</p>
             <a href="#" class="cta-button">Découvrir les circuits</a>
-        </section>
+        </div>
 
 
         <!-- Galerie de la Formule 1 -->
