--- a/schedule.html
+++ b/schedule.html
@@ -24,7 +24,7 @@
             <li class="dropdown">
                 <a href="javascript:void(0)">Plus</a>
                 <ul class="dropdown-content">
-                    <li><a href="#">Statistiques</a></li>
+                    <li><a href="circuits.htmls">Circuits</a></li>
                     <li><a href="#">Galerie</a></li>
                     <li><a href="#">Boutique</a></li>
                 </ul>
