--- a/circuits.html
+++ b/circuits.html
@@ -37,89 +37,132 @@
     </nav>
 
     <main>
-        <!-- Introduction aux circuits -->
         <section class="intro-section">
-            <h2>Les Circuits de la Formule 1</h2>
-            <p>Les circuits de Formule 1 sont des lieux emblématiques où se déroulent les courses les plus excitantes de chaque saison. Chaque circuit offre des défis uniques pour les pilotes, et certains sont réputés pour leur histoire, leur technicité et leur capacité à tester les compétences des meilleurs pilotes.</p>
+            <h2>Les Circuits de la Formule 1 - Saison 2024</h2>
+            <p>Découvrez les 24 circuits qui composent la saison 2024 de Formule 1. Chaque piste propose des défis uniques, offrant aux pilotes et aux fans des moments inoubliables.</p>
         </section>
 
-        <!-- Présentation des circuits -->
         <section class="site-sections">
             <div class="section">
-                <h3>Circuit de Bahrain</h3>
-                <p>Le circuit de Bahrain est un circuit moderne qui offre des défis techniques et des conditions climatiques difficiles.</p>
-                <img src="images/bahrain.png" alt="Circuit de Bahrain" style="padding-bottom:2em;">
-                <a href="#" class="cta-button">En savoir plus</a>
+                <h3>1. Sakhir (Bahreïn)</h3>
+                <p>Un circuit moderne avec des défis techniques et des conditions climatiques difficiles.</p>
+                <img src="images/sakhir.png" alt="Circuit de Sakhir">
             </div>
             <div class="section">
-                <h3>Circuit de Jeddah</h3>
-                <p>Le circuit urbain de Jeddah en Arabie Saoudite est rapide et spectaculaire, avec des virages serrés et des lignes droites longues.</p>
-                <img src="images/jeddah.png" alt="Circuit de Jeddah" style="padding-bottom:2em;">
-                <a href="#" class="cta-button">En savoir plus</a>
+                <h3>2. Djeddah (Arabie Saoudite)</h3>
+                <p>Un circuit urbain spectaculaire et rapide, avec des virages serrés et de longues lignes droites.</p>
+                <img src="images/djeddah.png" alt="Circuit de Djeddah">
             </div>
             <div class="section">
-                <h3>Circuit d'Australie (Melbourne)</h3>
-                <p>Le circuit de Melbourne est connu pour ses virages serrés et son ambiance festive, faisant de lui un événement incontournable de la saison.</p>
+                <h3>3. Melbourne (Australie)</h3>
+                <p>Connu pour ses virages serrés et son ambiance festive.</p>
                 <img src="images/melbourne.png" alt="Circuit de Melbourne">
-                <a href="#" class="cta-button">En savoir plus</a>
             </div>
             <div class="section">
-                <h3>Circuit de Bakou</h3>
-                <p>Le circuit urbain de Bakou en Azerbaïdjan est l'un des plus rapides du calendrier, combinant virages serrés et grandes lignes droites.</p>
-                <img src="images/bakou.png" alt="Circuit de Bakou" style="padding-bottom:2em;">
-                <a href="#" class="cta-button">En savoir plus</a>
+                <h3>4. Imola (Italie)</h3>
+                <p>Un circuit historique qui met les compétences des pilotes à l'épreuve.</p>
+                <img src="images/imola.png" alt="Circuit d'Imola">
             </div>
             <div class="section">
-                <h3>Circuit de Monaco</h3>
-                <p>Le circuit de Monaco est l'un des plus célèbres et des plus prestigieux du calendrier. C'est un circuit urbain, très technique, qui traverse les rues de Monte-Carlo. Connu pour ses virages serrés et ses rares opportunités de dépassement, il représente un véritable défi pour les pilotes.</p>
+                <h3>5. Miami (États-Unis)</h3>
+                <p>Un circuit urbain unique avec une ambiance glamour.</p>
+                <img src="images/miami.png" alt="Circuit de Miami">
+            </div>
+            <div class="section">
+                <h3>6. Monaco</h3>
+                <p>Un circuit emblématique, technique et prestigieux à travers les rues de Monte-Carlo.</p>
                 <img src="images/monaco.png" alt="Circuit de Monaco">
-                <a href="#" class="cta-button">En savoir plus</a>
             </div>
             <div class="section">
-                <h3>Circuit de Silverstone</h3>
-                <p>Le circuit de Silverstone, situé au Royaume-Uni, est un lieu légendaire qui a accueilli de nombreuses courses historiques. C'est un circuit rapide et fluide, avec des virages rapides qui permettent aux pilotes de pousser leurs machines à leurs limites.</p>
+                <h3>7. Barcelone (Espagne)</h3>
+                <p>Un circuit polyvalent qui teste l'équilibre des voitures.</p>
+                <img src="images/barcelone.png" alt="Circuit de Barcelone">
+            </div>
+            <div class="section">
+                <h3>8. Montréal (Canada)</h3>
+                <p>Un circuit rapide avec des murs proches et des défis techniques.</p>
+                <img src="images/montreal.png" alt="Circuit de Montréal">
+            </div>
+            <div class="section">
+                <h3>9. Spielberg (Autriche)</h3>
+                <p>Un circuit court mais rapide, entouré par des montagnes pittoresques.</p>
+                <img src="images/spielberg.png" alt="Circuit de Spielberg">
+            </div>
+            <div class="section">
+                <h3>10. Silverstone (Royaume-Uni)</h3>
+                <p>Un circuit légendaire avec des virages rapides et historiques.</p>
                 <img src="images/silverstone.png" alt="Circuit de Silverstone">
-                <a href="#" class="cta-button">En savoir plus</a>
             </div>
             <div class="section">
-                <h3>Circuit de Spa-Francorchamps</h3>
-                <p>Le circuit de Spa-Francorchamps, en Belgique, est l'un des plus respectés du calendrier. Connu pour son climat imprévisible et son célèbre virage Eau Rouge, il offre une combinaison unique de virages rapides et techniques.</p>
-                <img src="images/spa.png" alt="Circuit de Spa">
-                <a href="#" class="cta-button">En savoir plus</a>
+                <h3>11. Budapest (Hongrie)</h3>
+                <p>Un circuit technique avec des virages rapprochés.</p>
+                <img src="images/budapest.png" alt="Circuit de Budapest">
             </div>
             <div class="section">
-                <h3>Circuit de Suzuka</h3>
-                <p>Le circuit de Suzuka au Japon est célèbre pour sa forme unique en figure 8 et ses défis techniques. Les pilotes adorent ce circuit pour sa complexité et ses virages exigeants, comme le fameux "S de Degner".</p>
-                <img src="images/suzuka.png" alt="Circuit de Suzuka" style="padding-bottom:2em;">
-                <a href="#" class="cta-button">En savoir plus</a>
+                <h3>12. Spa-Francorchamps (Belgique)</h3>
+                <p>Un circuit emblématique avec son célèbre virage Eau Rouge.</p>
+                <img src="images/spa.png" alt="Circuit de Spa-Francorchamps">
             </div>
             <div class="section">
-                <h3>Circuit de Monza</h3>
-                <p>Le circuit de Monza en Italie est l'un des plus emblématiques, célèbre pour sa vitesse élevée et ses virages rapides. Il offre un spectacle inoubliable aux fans.</p>
-                <img src="images/monza.png" alt="Circuit de Monza" style="padding-bottom:2em;">
-                <a href="#" class="cta-button">En savoir plus</a>
+                <h3>13. Zandvoort (Pays-Bas)</h3>
+                <p>Un circuit rapide avec des virages inclinés uniques.</p>
+                <img src="images/zandvoort.png" alt="Circuit de Zandvoort">
             </div>
             <div class="section">
-                <h3>Circuit de Singapour</h3>
-                <p>Le circuit de Singapour est un autre circuit urbain où les pilotes doivent gérer la chaleur et l'humidité tout en affrontant des virages difficiles.</p>
-                <img src="images/singapour.png" alt="Circuit de Singapour" style="padding-bottom:2em;">
-                <a href="#" class="cta-button">En savoir plus</a>
+                <h3>14. Monza (Italie)</h3>
+                <p>Un temple de la vitesse avec des virages rapides et des lignes droites longues.</p>
+                <img src="images/monza.png" alt="Circuit de Monza">
             </div>
             <div class="section">
-                <h3>Circuit de Las Vegas</h3>
-                <p>Le circuit de Las Vegas est un événement nocturne dans la ville des lumières, offrant des lignes droites rapides et des virages techniques.</p>
-                <img src="images/lasvegas.png" alt="Circuit de las Vegas" style="padding-bottom:2em;">
-                <a href="#" class="cta-button">En savoir plus</a>
+                <h3>15. Singapour</h3>
+                <p>Un circuit urbain nocturne avec des défis physiques pour les pilotes.</p>
+                <img src="images/singapour.png" alt="Circuit de Singapour">
             </div>
             <div class="section">
-                <h3>Circuit d'Abou Dabi</h3>
-                <p>Le circuit d'Abou Dabi est un circuit moderne qui offre un défi de fin de saison avec ses virages serrés et ses lignes droites rapides.</p>
-                <img src="images/abu.png" alt="Circuit de Abu Dabi" style="padding-bottom:2em;">
-                <a href="#" class="cta-button">En savoir plus</a>
+                <h3>16. Suzuka (Japon)</h3>
+                <p>Un circuit technique en forme de "8", adoré par les pilotes.</p>
+                <img src="images/suzuka.png" alt="Circuit de Suzuka">
             </div>
-        </section>
-
-    </main>
+            <div class="section">
+                <h3>17. Austin (États-Unis)</h3>
+                <p>Un circuit moderne avec des dénivelés importants.</p>
+                <img src="images/austin.png" alt="Circuit d'Austin">
+            </div>
+            <div class="section">
+                <h3>18. Mexico City (Mexique)</h3>
+                <p>Un circuit unique avec une ambiance festive et un stade impressionnant.</p>
+                <img src="images/mexico.png" alt="Circuit de Mexico">
+            </div>
+            <div class="section">
+                <h3>19. São Paulo (Brésil)</h3>
+                <p>Un circuit classique connu pour ses courses palpitantes.</p>
+                <img src="images/saopaulo.png" alt="Circuit de São Paulo">
+            </div>
+            <div class="section">
+                <h3>20. Las Vegas (États-Unis)</h3>
+                <p>Un nouveau circuit urbain spectaculaire dans la ville du divertissement.</p>
+                <img src="images/lasvegas.png" alt="Circuit de Las Vegas">
+            </div>
+            <div class="section">
+                <h3>21. Yas Marina (Abou Dabi)</h3>
+                <p>Un circuit moderne qui conclut la saison dans un cadre luxueux.</p>
+                <img src="images/yasmarina.png" alt="Circuit de Yas Marina">
+            </div>
+            <div class="section">
+                <h3>22. Shanghai (Chine)</h3>
+                <p>Un circuit avec des lignes droites longues et des virages techniques.</p>
+                <img src="images/shanghai.png" alt="Circuit de Shanghai">
+            </div>
+            <div class="section">
+                <h3>23. Portimão (Portugal)</h3>
+                <p>Un circuit vallonné avec des virages fluides.</p>
+                <img src="images/portimao.png" alt="Circuit de Portimão">
+            </div>
+            <div class="section">
+                <h3>24. Baku (Azerbaïdjan)</h3>
+                <p>Le circuit de Bakou, en Azerbaïdjan, est célèbre pour ses lignes droites rapides et son tracé urbain exigeant.</p>
+                <img src="images/baku.png" alt="circuit de Baku">
+            </div>
 
     <footer class="footer-f1">
         <div class="footer-content">
