--- a/circuits.html
+++ b/circuits.html
@@ -163,7 +163,8 @@
                 <p>Le circuit de Bakou, en Azerbaïdjan, est célèbre pour ses lignes droites rapides et son tracé urbain exigeant.</p>
                 <img src="images/baku.png" alt="circuit de Baku">
             </div>
-
+        </section>
+    </main>
     <footer class="footer-f1">
         <div class="footer-content">
             <div class="footer-section about">
