--- a/circuits.html
+++ b/circuits.html
@@ -161,7 +161,7 @@
             <div class="section">
                 <h3>24. Baku (Azerbaïdjan)</h3>
                 <p>Le circuit de Bakou, en Azerbaïdjan, est célèbre pour ses lignes droites rapides et son tracé urbain exigeant.</p>
-                <img src="images/baku.png" alt="circuit de Baku">
+                <img src="images/bakou.png" alt="circuit de Baku">
             </div>
         </section>
     </main>
