correction affichage dans le circuit 18 du soft

--- a/circuits.html
+++ b/circuits.html
@@ -374,7 +374,7 @@
                 <img src="images/mexico.png" alt="Circuit de Mexico">
                 <div class="info">
                     <div class="info-item">
-                        <img src="images/psoft.png" style="width: 3em;" alt="Usure des pneus">
+                        <img src="images/soft.png" style="width: 3em;" alt="Usure des pneus">
                         <p><strong> forte usure des pneumatiques</strong></p>
                     </div>
                     <div class="info-item">
