--- a/circuits.html
+++ b/circuits.html
@@ -23,15 +23,8 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="teams.html">Équipes</a></li>
             <li><a href="drivers.html">Pilotes</a></li>
-            <li><a href="schedule.html">Calendrier</a></li>
-            <li><a href="news.html">Actualités</a></li>
-            <li class="dropdown">
-                <a href="javascript:void(0)">Plus</a>
-                <ul class="dropdown-content">
-                    <li><a href="circuits.html">Circuits</a></li>
-                    <li><a href="gallery.html">Galerie</a></li>
-                    <li><a href="shop.html">Boutique</a></li>
-                </ul>
+            <li><a href="circuits.html">Circuits</a></li>
+            
             </li>
         </ul>
     </nav>
@@ -71,15 +64,15 @@
                 <div class="info">
                     <div class="info-item">
                         <img src="images/medium.png" style="width: 3em;" alt="Usure des pneus">
-                        <p><strong> forte usure des pneumatiques</strong></p>
+                        <p><strong> usure modéré des pneumatiques</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/compteur-de-vitesse.png" style="width: 3em;" alt="Vitesse maximale">
-                        <p><strong> vitesse maximale: 335 km/h</strong></p>
+                        <p><strong> vitesse maximale: 340 km/h</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/piste-de-course.png" style="width: 3em;" alt="Type de circuit">
-                        <p><strong> type de circuit: circuit permanent</strong></p>
+                        <p><strong> type de circuit: circuit urbain</strong></p>
                     </div>
                 </div>
             </div>
@@ -89,16 +82,16 @@
                 <img src="images/melbourne.png" alt="Circuit de Melbourne">
                 <div class="info">
                     <div class="info-item">
-                        <img src="images/hard.png" style="width: 3em;" alt="Usure des pneus">
-                        <p><strong> forte usure des pneumatiques</strong></p>
+                        <img src="images/medium.png" style="width: 3em;" alt="Usure des pneus">
+                        <p><strong> usure modéré des pneumatiques</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/compteur-de-vitesse.png" style="width: 3em;" alt="Vitesse maximale">
-                        <p><strong> vitesse maximale: 335 km/h</strong></p>
+                        <p><strong> vitesse maximale: 320 km/h</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/piste-de-course.png" style="width: 3em;" alt="Type de circuit">
-                        <p><strong> type de circuit: circuit permanent</strong></p>
+                        <p><strong> type de circuit: circuit urbain</strong></p>
                     </div>
                 </div>
             </div>
@@ -108,16 +101,16 @@
                 <img src="images/imola.png" alt="Circuit d'Imola">
                 <div class="info">
                     <div class="info-item">
-                        <img src="images/soft.png" style="width: 3em;" alt="Usure des pneus">
-                        <p><strong> forte usure des pneumatiques</strong></p>
+                        <img src="images/medium.png" style="width: 3em;" alt="Usure des pneus">
+                        <p><strong> usure modéré des pneumatiques</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/compteur-de-vitesse.png" style="width: 3em;" alt="Vitesse maximale">
-                        <p><strong> vitesse maximale: 335 km/h</strong></p>
+                        <p><strong> vitesse maximale: 330 km/h</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/piste-de-course.png" style="width: 3em;" alt="Type de circuit">
-                        <p><strong> type de circuit: circuit permanent</strong></p>
+                        <p><strong> type de circuit: circuit urbain</strong></p>
                     </div>
                 </div>
             </div>
@@ -127,8 +120,8 @@
                 <img src="images/miami.png" alt="Circuit de Miami">
                 <div class="info">
                     <div class="info-item">
-                        <img src="images/soft.png" style="width: 3em;" alt="Usure des pneus">
-                        <p><strong> forte usure des pneumatiques</strong></p>
+                        <img src="images/medium.png" style="width: 3em;" alt="Usure des pneus">
+                        <p><strong> usure modéré des pneumatiques</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/compteur-de-vitesse.png" style="width: 3em;" alt="Vitesse maximale">
@@ -136,7 +129,7 @@
                     </div>
                     <div class="info-item">
                         <img src="images/piste-de-course.png" style="width: 3em;" alt="Type de circuit">
-                        <p><strong> type de circuit: circuit permanent</strong></p>
+                        <p><strong> type de circuit: circuit urbain</strong></p>
                     </div>
                 </div>
             </div>
@@ -146,16 +139,16 @@
                 <img src="images/monaco.png" alt="Circuit de Monaco">
                 <div class="info">
                     <div class="info-item">
-                        <img src="images/soft.png" style="width: 3em;" alt="Usure des pneus">
-                        <p><strong> forte usure des pneumatiques</strong></p>
+                        <img src="images/hard.png" style="width: 3em;" alt="Usure des pneus">
+                        <p><strong>faible usure des pneumatiques</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/compteur-de-vitesse.png" style="width: 3em;" alt="Vitesse maximale">
-                        <p><strong> vitesse maximale: 335 km/h</strong></p>
+                        <p><strong> vitesse maximale: 290 km/h</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/piste-de-course.png" style="width: 3em;" alt="Type de circuit">
-                        <p><strong> type de circuit: circuit permanent</strong></p>
+                        <p><strong> type de circuit: circuit urbain</strong></p>
                     </div>
                 </div>
             </div>
@@ -165,12 +158,12 @@
                 <img src="images/barcelone.png" alt="Circuit de Barcelone">
                 <div class="info">
                     <div class="info-item">
-                        <img src="images/soft.png" style="width: 3em;" alt="Usure des pneus">
-                        <p><strong> forte usure des pneumatiques</strong></p>
+                        <img src="images/medium.png" style="width: 3em;" alt="Usure des pneus">
+                        <p><strong> usure modéré des pneumatiques</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/compteur-de-vitesse.png" style="width: 3em;" alt="Vitesse maximale">
-                        <p><strong> vitesse maximale: 335 km/h</strong></p>
+                        <p><strong> vitesse maximale: 325 km/h</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/piste-de-course.png" style="width: 3em;" alt="Type de circuit">
@@ -184,12 +177,12 @@
                 <img src="images/montreal.png" alt="Circuit de Montréal">
                 <div class="info">
                     <div class="info-item">
-                        <img src="images/soft.png" style="width: 3em;" alt="Usure des pneus">
-                        <p><strong> forte usure des pneumatiques</strong></p>
+                        <img src="images/medium.png" style="width: 3em;" alt="Usure des pneus">
+                        <p><strong> usure modéré des pneumatiques</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/compteur-de-vitesse.png" style="width: 3em;" alt="Vitesse maximale">
-                        <p><strong> vitesse maximale: 335 km/h</strong></p>
+                        <p><strong> vitesse maximale: 340 km/h</strong></p>
                     </div>
                     <div class="info-item">
                         <img src="images/piste-de-course.png" style="width: 3em;" alt="Type de circuit">
